--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,14 @@
           android:versionName="1.0">
     <application android:label="@string/app_name">
         <activity android:name="MyActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.Holo.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryActivity"/>
+        <activity android:name=".GalleryActivity"
+                  android:theme="@android:style/Theme.Holo.Light"/>
     </application>
 </manifest> 
