--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,13 @@
           package="com.example.RoboGuice"
           android:versionCode="1"
           android:versionName="1.0">
-    <application android:label="@string/app_name">
-        <activity android:name="MyActivity"
-                  android:label="@string/app_name">
+
+    <application
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Holo.Light">
+        <activity
+            android:name="MyActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
