--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GalleryActivity"
+                  android:label="Gallery"
                   android:theme="@android:style/Theme.Holo.Light"/>
     </application>
 </manifest> 
