--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,18 +4,29 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16"/>
+
     <application
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light">
         <activity
-            android:name=".MyActivity"
+            android:name=".MyGallery"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryActivity"
-                  android:label="Gallery"/>
+        <activity
+            android:name=".MyImageDetail"
+            android:label="Gallery">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest> 
