--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.RoboGuice"
+          package="se.magnulund.PictureGallery"
           android:versionCode="1"
           android:versionName="1.0">
 
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light">
         <activity
-            android:name=".MyGallery"
+            android:name=".MainGallery"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyImageDetail"
+            android:name=".PictureDetail"
             android:label="Gallery">
 
             <intent-filter>
@@ -28,5 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".fragments.GalleryFragment"/>
     </application>
 </manifest> 
